--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,7 @@
           <input
             type="checkbox"
             class="todo__status"
-            [checked]="todo.completed"
-            (change)="handleTodoToggle($event, todo)"
+            [(ngModel)]="todo.completed"
           />
         </label>
 
